sample/msvc/error/c2033c.cpp
// C2033.cpp
struct S {
   int b -> int : 1;  // C2033
};
